--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy == 1.10.1
-pandas == 0.17.0
-Requests == 2.9.1
+numpy == 1.9.3
+pandas == 0.10.1
+requests == 2.7.0
 simple_salesforce == 0.68.1
 xlrd == 0.9.4
 xlutils == 1.7.1
